[gd_scene load_steps=13 format=2]

[ext_resource path="res://map/shrine.png" type="Texture" id=1]
[ext_resource path="res://map/shrine_moon.png" type="Texture" id=2]
[ext_resource path="res://map/Shrine.gd" type="Script" id=3]
[ext_resource path="res://map/shrine_ground.png" type="Texture" id=4]

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;

uniform sampler2D color_offset;
uniform sampler2D time_offset;

void fragment() {
	vec4 c = texture(TEXTURE, UV);
	float co = (texture(color_offset, UV).r - 0.5) / 4.0;
	float to = texture(time_offset, UV).r;
	if (c.a > 0.0) {
		COLOR = vec4(c.rgb, c.a + co * sin(TIME + to * 6.28));
		//COLOR = vec4(c.rgb, c.a + co);
	} else {
		COLOR = c;
	}
}"

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 6 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.717703, 1 )
colors = PoolColorArray( 0, 0.560784, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
lifetime_randomness = 0.31
emission_shape = 1
emission_sphere_radius = 55.0
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 5.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -2.0
linear_accel_random = 0.14
color_ramp = SubResource( 4 )
hue_variation = 0.02
hue_variation_random = 0.36

[sub_resource type="ParticlesMaterial" id=8]
lifetime_randomness = 0.22
emission_shape = 1
emission_sphere_radius = 55.0
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 15.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -2.0
linear_accel_random = 0.14
color_ramp = SubResource( 4 )
hue_variation = 0.02
hue_variation_random = 0.36

[sub_resource type="CircleShape2D" id=1]
radius = 36.8531

[sub_resource type="CircleShape2D" id=2]
radius = 80.0

[node name="Shrine" type="Area2D" groups=[
"shrines",
]]
monitoring = false
collision_layer = 64
collision_mask = 4
script = ExtResource( 3 )

[node name="Ground" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="Pool" type="Sprite" parent="."]
modulate = Color( 1.5, 1.5, 1.25, 1 )
material = SubResource( 7 )
texture = ExtResource( 1 )

[node name="Moon" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
z_index = -1
texture = ExtResource( 2 )

[node name="Particles" type="Particles2D" parent="."]
amount = 40
lifetime = 3.0
process_material = SubResource( 5 )

[node name="MidnightParticles" type="Particles2D" parent="."]
emitting = false
amount = 200
lifetime = 3.0
process_material = SubResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.293762, -33.1754 )
shape = SubResource( 1 )

[node name="CorruptionArea" type="Area2D" parent="."]
visible = false
monitorable = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="CorruptionArea"]
visible = false
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Tween" type="Tween" parent="."]

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( -75.038, -0.23597 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
position = Vector2( 85.4206, 0 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
